app rewrite (be & fe), tsx implementation